# flink-learning

./: .gitignore  Dockerfile.flink  Makefile  README.md  docker-compose.yml  flink-config.yaml  pyproject.flink.toml  pyproject.toml
docs/: concepts.md
exercises/01-basics/: README.md
exercises/02-transformations/: README.md  filter_rides.py  flatmap_events.py  map_to_eur.py
exercises/03-windows/: README.md  session_driver.py  setup_tables.sql  sliding_average.py  tumbling_revenue.py
exercises/04-state/: README.md  cumulative_counter.py  max_fare_tracker.py  rate_limiter.py  setup_tables.sql  state_vs_window.py
exercises/05-watermarks/: README.md  delayed_producer.py  late_data_observer.py  side_output_late.py
exercises/06-joins/: README.md  broadcast_enrich.py  coprocess_join.py  interval_join.py  setup_zones_table.sql  stream_stream_join.py  stream_table_join.py
exercises/07-project/: README.md  dashboard_job.py
src/producers/: drivers_producer.py  taxi_producer.py  zones_producer.py
